--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           </li>
           <li class="item-link"><a href="#" target="_blank">LinkedIn</a></li>
           <li class="item-link"><a href="#" target="_blank">Twitter</a></li>
-          <li class="item-link item-link-last" target="_blank">
-            <a href="#">Instagram</a>
+          <li class="item-link item-link-last">
+            <a href="#" target="_blank">Instagram</a>
           </li>
         </ul>
       </div>
