--- a/index.html
+++ b/index.html
@@ -26,14 +26,39 @@
         <p class="profile-address">London, United Kingdom</p>
         <p class="profile-job">"Front-end developer and avid reader."</p>
         <ul class="social-list">
-          <li class="item-link"><a href="#" target="_blank">GitHub</a></li>
           <li class="item-link">
-            <a href="#" target="_blank">Frontend Mentor</a>
+            <a href="#" target="_blank" title="Visit Jessica's GitHub profile."
+              >GitHub</a
+            >
           </li>
-          <li class="item-link"><a href="#" target="_blank">LinkedIn</a></li>
-          <li class="item-link"><a href="#" target="_blank">Twitter</a></li>
+          <li class="item-link">
+            <a
+              href="#"
+              target="_blank"
+              title="Visit Jessica's Frontend Mentor profile."
+              >Frontend Mentor</a
+            >
+          </li>
+          <li class="item-link">
+            <a
+              href="#"
+              target="_blank"
+              title="Visit Jessica's LinkedIn profile."
+              >LinkedIn</a
+            >
+          </li>
+          <li class="item-link">
+            <a href="#" target="_blank" title="Visit Jessica's Twitter profile."
+              >Twitter</a
+            >
+          </li>
           <li class="item-link item-link-last">
-            <a href="#" target="_blank">Instagram</a>
+            <a
+              href="#"
+              target="_blank"
+              title="Visit Jessica's Instagram profile."
+              >Instagram</a
+            >
           </li>
         </ul>
       </div>
