--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
         />
         <h1 class="profile-name">Jessica Randall</h1>
         <p class="profile-address">London, United Kingdom</p>
-        <p class="profile-job">"Front-end developer and avid reader."</p>
+        <blockquote class="profile-job">
+          "Front-end developer and avid reader."
+        </blockquote>
         <ul class="social-list">
           <li class="item-link">
-            <a href="#" target="_blank" title="Visit Jessica's GitHub profile."
+            <a
+              href="#"
+              target="_blank"
+              title="Visit Jessica's GitHub profile."
+              rel="noopener noreferrer"
               >GitHub</a
             >
           </li>
@@ -36,6 +42,7 @@
               href="#"
               target="_blank"
               title="Visit Jessica's Frontend Mentor profile."
+              rel="noopener noreferrer"
               >Frontend Mentor</a
             >
           </li>
@@ -44,11 +51,16 @@
               href="#"
               target="_blank"
               title="Visit Jessica's LinkedIn profile."
+              rel="noopener noreferrer"
               >LinkedIn</a
             >
           </li>
           <li class="item-link">
-            <a href="#" target="_blank" title="Visit Jessica's Twitter profile."
+            <a
+              href="#"
+              target="_blank"
+              title="Visit Jessica's Twitter profile."
+              rel="noopener noreferrer"
               >Twitter</a
             >
           </li>
@@ -57,6 +69,7 @@
               href="#"
               target="_blank"
               title="Visit Jessica's Instagram profile."
+              rel="noopener noreferrer"
               >Instagram</a
             >
           </li>
